fixed extra padding under image and added main tag to html

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,14 +42,13 @@ body {
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
     opacity: 0.3;
+    display: block;
 }
 
 .image-container {
     background-color: var(--primary-accent);
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
-    margin: 0;
-    padding: 0;
 }
 
 .card__title {
